# rust-actix-rest

./: .env  Cargo.toml  README.md
migrations/2019-08-09-005408_create_todos/: up.sql
src/: db_handler.rs  main.rs  schema.rs
src/models/: todo.rs
src/services/: todos.rs
