[package]
name = "rust-actix-rest"
version = "0.1.0"
authors = ["Sebastian Strobl <Sebastian@Strobl.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "*"
actix-web = "*"
actix-cors = "*"
diesel = {version="*", features=["postgres"]}
dotenv = "*"
chrono = "*"
r2d2 = "*"
r2d2-diesel = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
futures = "*"